fix spacing and items showing

--- a/src/styles/coaches.sass
+++ b/src/styles/coaches.sass
@@ -10,13 +10,12 @@
         height: 570px
         .swiper-wrapper
             .coach // .swiper-slide
-                max-width: 83vw
+                // max-width: 83vw
                 max-width: 82vw
                 box-sizing: border-box
                 margin: 
                     left: 9vw
                     right: 9vw
-
                 padding: 34px 26px 38px
                 box-sizing: border-box
                 border-radius: 10px
@@ -69,9 +68,10 @@
                     z-index: 1
                     background-color: rgba(36, 36, 36, 0.9)
                 &.swiper-slide-next
-                    margin-left: -20px
+                    margin-left: -5vw
                 &.swiper-slide-prev
-                    right: -52px
+                    // margin-right: 5vw
+                    right: -14vw
                 &:hover
                     .coach-header,
                     .coach-content
