--- a/src/styles/disciplines.sass
+++ b/src/styles/disciplines.sass
@@ -22,7 +22,7 @@
                 background-size: cover
                 background-repeat: no-repeat
                 border-radius: 10px
-                margin-bottom: 14px
+                margin-bottom: 18px
                 height: 220px
                 padding: 0 28px
                 color: white
